Add watching view to view uploaded video

--- a/web/templates/video/show.html.eex
+++ b/web/templates/video/show.html.eex
@@ -1,28 +1,10 @@
-<h2>Show video</h2>
+<td class="text-right">
+    <%= link "Watch", to: watch_path(@conn, :show, @video),
+        class: "btn btn-default btn-xs" %>
 
-<ul>
+    <%= link "Edit", to: video_path(@conn, :edit, @video),
+                   class: "btn btn-default btn-xs" %>
 
-  <li>
-    <strong>User:</strong>
-    <%= @video.user_id %>
-  </li>
-
-  <li>
-    <strong>Url:</strong>
-    <%= @video.url %>
-  </li>
-
-  <li>
-    <strong>Title:</strong>
-    <%= @video.title %>
-  </li>
-
-  <li>
-    <strong>Description:</strong>
-    <%= @video.description %>
-  </li>
-
-</ul>
-
-<%= link "Edit", to: video_path(@conn, :edit, @video) %>
-<%= link "Back", to: video_path(@conn, :index) %>
+    <%= link "Delete", to: video_path(@conn, :delete, @video), method: :delete,
+        data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %>
+</td>
